Data, non-templated FutureData.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ add_executable(run_tests
     tests/test_main.cpp
     tests/test_future.cpp
     tests/test_fnc.cpp
+    tests/test_data.cpp
     )
 target_include_directories(run_tests PRIVATE
     ${CATCH_INCLUDE_DIRS}
