Added ID. Refactoring towards IVarRef

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ add_library(taskloaf SHARED
     src/start.cpp
     src/fnc.cpp
     src/run.cpp
+    src/id.cpp
     )
 
 target_include_directories(taskloaf PRIVATE
@@ -81,6 +82,7 @@ add_executable(run_tests
     tests/test_data.cpp
     tests/test_print.cpp
     tests/test_run.cpp
+    tests/test_id.cpp
     )
 target_include_directories(run_tests PRIVATE
     ${CATCH_INCLUDE_DIRS}
