--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_library(taskloaf SHARED
     src/taskloaf/ivar_tracker.cpp
     src/taskloaf/id.cpp
     src/taskloaf/ring.cpp
+    src/taskloaf/comm.cpp
     )
 
 target_include_directories(taskloaf PRIVATE
@@ -75,7 +76,7 @@ add_executable(run_tests
     tests/test_worker.cpp
     tests/test_id.cpp
     tests/test_ring.cpp
-    tests/test_protocol.cpp
+    tests/test_comm.cpp
     )
 target_include_directories(run_tests PRIVATE
     ${CATCH_INCLUDE_DIRS}
