Refactored ring db with a stress test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,5 +105,6 @@ taskloaf_example(fib examples/fib.cpp)
 taskloaf_example(totient examples/totient.cpp)
 taskloaf_example(dot_product examples/dot_product.cpp)
 taskloaf_example(cholesky examples/cholesky.cpp)
-taskloaf_example(diffusion examples/diffusion.cpp)
 target_link_libraries(cholesky openblas)
+taskloaf_example(diffusion examples/diffusion.cpp)
+taskloaf_example(ring_stress examples/ring_stress.cpp)
