Closures for serializable internals!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,9 +175,9 @@ macro(taskloaf_example name filename)
     target_link_libraries(${name} taskloaf)
 endmacro()
 
-taskloaf_example(fib examples/fib.cpp)
-taskloaf_example(totient examples/totient.cpp)
-taskloaf_example(dot_product examples/dot_product.cpp)
-taskloaf_example(cholesky examples/cholesky.cpp)
-target_link_libraries(cholesky openblas)
-taskloaf_example(diffusion examples/diffusion.cpp)
+#taskloaf_example(fib examples/fib.cpp)
+#taskloaf_example(totient examples/totient.cpp)
+#taskloaf_example(dot_product examples/dot_product.cpp)
+#taskloaf_example(cholesky examples/cholesky.cpp)
+#target_link_libraries(cholesky openblas)
+#taskloaf_example(diffusion examples/diffusion.cpp)
