--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,10 @@
 ################################################################################
 
 cmake_minimum_required(VERSION 2.8.12)
-project(taskloaf CXX)
+project(taskloaf CXX C)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
-set(BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Release)
 include(ExternalProject)
-
 
 set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -21,32 +20,30 @@ if("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_BINARY_DIR}")
 endif()
 
 ################################################################################
-#                              Check for threading library (pthreads..., OpenMP)
-################################################################################
-
-FIND_PACKAGE(OpenMP)
-if(OPENMP_FOUND)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-endif()
-
-################################################################################
 #                              Check for MPI!
 ################################################################################
 
-find_package(MPI REQUIRED)
+find_package(MPI)
+if (MPI_FOUND)
+    add_definitions(-DMPI_FOUND)
+endif()
 
 ################################################################################
 #                              setup compiler
 ################################################################################
 
-set(warnings "-Wall -Wextra -Werror -Wno-parentheses -Wno-deprecated-declarations -Wno-unknown-pragmas -Wno-literal-suffix")
-set(opt "-O3 -g") 
-if (BUILD_TYPE STREQUAL "Debug")
-    set(opt "-O0 -g")
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    set(CMAKE_CXX_FLAGS 
+        "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    set(CMAKE_CXX_FLAGS 
+        "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wno-literal-suffix")
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 endif()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${warnings} ${opt}")
+
+if(CMAKE_COMPILER_IS_GNUCXX)
+endif()
 
 include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
@@ -71,8 +68,7 @@ set(PROJECT_SOURCE_DIR ${PROJECT_DIR}/src)
 
 ExternalProject_Add(
     concurrentqueue
-    DOWNLOAD_COMMAND git clone --depth 1
-	git@github.com:cameron314/concurrentqueue.git
+    DOWNLOAD_COMMAND git clone --depth 1 git@github.com:cameron314/concurrentqueue.git
     CONFIGURE_COMMAND ""
     BUILD_COMMAND ""
     UPDATE_COMMAND ""
@@ -87,8 +83,7 @@ set(MPMCQUEUE_INCLUDE_DIR ${MPMCQUEUE_ROOT_DIR}/concurrentqueue)
 
 ExternalProject_Add(
     cereal
-    DOWNLOAD_COMMAND git clone --depth 1
-        git@github.com:USCiLab/cereal.git
+    DOWNLOAD_COMMAND git clone --depth 1 git@github.com:USCiLab/cereal.git
     CONFIGURE_COMMAND ""
     BUILD_COMMAND ""
     UPDATE_COMMAND ""
@@ -131,15 +126,18 @@ add_library(taskloaf SHARED
     src/taskloaf/mpi_comm.cpp
     )
 
-MESSAGE(${CEREAL_INCLUDE_DIR})
 target_include_directories(taskloaf PRIVATE
     ${PROJECT_INCLUDE_DIR}
     ${MPMCQUEUE_INCLUDE_DIR}
     ${CEREAL_INCLUDE_DIR}
-    ${MPI_INCLUDE_PATH}
     )
 target_link_libraries(taskloaf ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(taskloaf ${MPI_LIBRARIES})
+
+if (MPI_FOUND)
+    target_include_directories(taskloaf PRIVATE ${MPI_INCLUDE_PATH})
+    target_link_libraries(taskloaf ${MPI_LIBRARIES})
+endif()
+
 add_dependencies(taskloaf concurrentqueue cereal)
 
 ################################################################################
@@ -165,11 +163,13 @@ taskloaf_tests(run_tests
     "tests/test_main.cpp;tests/test_future.cpp;tests/test_fnc.cpp;tests/test_data.cpp;tests/test_worker.cpp;tests/test_id.cpp;tests/test_ring.cpp;tests/test_comm.cpp;tests/test_ref_counting.cpp"
 )
 
-taskloaf_tests(mpi_tests "tests/test_mpi.cpp")
-
 enable_testing()
-add_test(all-tests mpi_tests)
-add_test(all-tests run_tests)
+add_test(main-tests run_tests)
+
+if (MPI_FOUND)
+    taskloaf_tests(mpi_tests "tests/test_mpi.cpp")
+    add_test(mpi-tests mpirun -n 2 mpi_tests)
+endif()
 
 ################################################################################
 #                              taskloaf examples
@@ -181,8 +181,10 @@ macro(taskloaf_example name filename)
         ${PROJECT_INCLUDE_DIR}
         ${MPMCQUEUE_INCLUDE_DIR}
         ${CEREAL_INCLUDE_DIR}
-        ${MPI_INCLUDE_PATH}
     )
+    if (MPI_FOUND)
+        target_include_directories(${name} PRIVATE ${MPI_INCLUDE_PATH})
+    endif()
     add_dependencies(${name} taskloaf)
     target_link_libraries(${name} taskloaf)
 endmacro()
@@ -190,13 +192,15 @@ endmacro()
 taskloaf_example(fib examples/fib.cpp)
 taskloaf_example(totient examples/totient.cpp)
 taskloaf_example(dot_product examples/dot_product.cpp)
+taskloaf_example(diffusion examples/diffusion.cpp)
 
 find_package(BLAS)
 find_package(LAPACK)
-if (BLAS_FOUND AND LAPACK_FOUND) 
+if (BLAS_FOUND AND LAPACK_FOUND)
     taskloaf_example(cholesky examples/cholesky.cpp)
-    target_link_libraries(cholesky openblas)
+    target_link_libraries(cholesky ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
 endif()
 
-taskloaf_example(fibmpi examples/fibmpi.cpp)
-taskloaf_example(diffusion examples/diffusion.cpp)
+if (MPI_FOUND)
+    taskloaf_example(fibmpi examples/fibmpi.cpp)
+endif()
