--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 ################################################################################
-#                              Cmake config ################################################################################
+#                              Cmake config
+################################################################################
 
 cmake_minimum_required(VERSION 2.8.12)
 project(taskloaf CXX C)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 set(CMAKE_BUILD_TYPE Release)
-include(ExternalProject)
 
 set(TASKLOAF_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -36,8 +36,6 @@ endif()
 #                              setup compiler
 ################################################################################
 
-include(CheckCXXCompilerFlag)
-
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     set(CMAKE_CXX_FLAGS 
         "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
@@ -48,6 +46,7 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 endif()
 
+include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-std=c++1y" COMPILER_SUPPORTS_CXX14)
 if(COMPILER_SUPPORTS_CXX14)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
