--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
 # Enable C++ support
 language: cpp
-sudo: required
-dist: trusty
 compiler:
   - clang
   - gcc
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+  - if [ "$CXX" = "clang++" ]; then sudo apt-get install -qq libstdc++-4.8-dev; fi
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
 script:
   - mkdir build
   - cd build
   - cmake .. && make
+    
 # Build steps
 # matrix:
 #   include:
