--- a/.travis.yml
+++ b/.travis.yml
@@ -6,87 +6,47 @@ matrix:
       addons:
         apt:
           sources:
+            - kalakris-cmake
             - ubuntu-toolchain-r-test
           packages:
+            - cmake
             - g++-4.9
       env: COMPILER=g++-4.9
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-5
-      env: COMPILER=g++-5
     - compiler: clang
       addons:
         apt:
           sources:
+            - kalakris-cmake
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.6
           packages:
+            - cmake
             - clang-3.6
       env: COMPILER=clang++-3.6
-    - compiler: clang
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.7
-          packages:
-            - clang-3.7
-      env: COMPILER=clang++-3.7
+    # - compiler: gcc
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - kalakris-cmake
+    #         - ubuntu-toolchain-r-test
+    #       packages:
+    #         - cmake
+    #         - g++-5
+    #   env: COMPILER=g++-5
+    # - compiler: clang
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - kalakris-cmake
+    #         - ubuntu-toolchain-r-test
+    #         - llvm-toolchain-precise-3.7
+    #       packages:
+    #         - cmake
+    #         - clang-3.7
+    #   env: COMPILER=clang++-3.7
 script:
   - mkdir build
   - cd build
   - export CXX=$COMPILER
   - cmake ..
   - make -j2
-    
-# Build steps
-# matrix:
-#   include:
-#     - compiler: gcc
-#       addons:
-#         apt:
-#           sources:
-#             - ubuntu-toolchain-r-test
-#           packages:
-#             - g++-4.9
-#       env: COMPILER=g++-4.9
-#     - compiler: gcc
-#       addons:
-#         apt:
-#           sources:
-#             - ubuntu-toolchain-r-test
-#           packages:
-#             - g++-5
-#       env: COMPILER=g++-5
-#     - compiler: clang
-#     - compiler: clang
-#       addons:
-#         apt:
-#           sources:
-#             - ubuntu-toolchain-r-test
-#             - llvm-toolchain-precise-3.5
-#           packages:
-#             - clang-3.5
-#       env: COMPILER=clang++-3.5
-#     - compiler: clang
-#       addons:
-#         apt:
-#           sources:
-#             - ubuntu-toolchain-r-test
-#             - llvm-toolchain-precise-3.6
-#           packages:
-#             - clang-3.6
-#       env: COMPILER=clang++-3.6
-#     - compiler: clang
-#       addons:
-#         apt:
-#           sources:
-#             - ubuntu-toolchain-r-test
-#             - llvm-toolchain-precise-3.7
-#           packages:
-#             - clang-3.7
-#       env: CXX=clang++-3.7
