--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,50 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - cmake
+            - g++-4.8
+      env: COMPILER=g++-4.8
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - kalakris-cmake
+            - ubuntu-toolchain-r-test
+          packages:
+            - cmake
             - g++-4.9
       env: COMPILER=g++-4.9
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - kalakris-cmake
+            - ubuntu-toolchain-r-test
+          packages:
+            - cmake
+            - g++-5
+      env: COMPILER=g++-5
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - kalakris-cmake
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise
+          packages:
+            - cmake
+            - clang-3.4
+      env: COMPILER=clang++-3.4
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - kalakris-cmake
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.5
+          packages:
+            - cmake
+            - clang-3.5
+      env: COMPILER=clang++-3.5
     - compiler: clang
       addons:
         apt:
@@ -23,27 +65,28 @@ matrix:
             - cmake
             - clang-3.6
       env: COMPILER=clang++-3.6
-    # - compiler: gcc
-    #   addons:
-    #     apt:
-    #       sources:
-    #         - kalakris-cmake
-    #         - ubuntu-toolchain-r-test
-    #       packages:
-    #         - cmake
-    #         - g++-5
-    #   env: COMPILER=g++-5
-    # - compiler: clang
-    #   addons:
-    #     apt:
-    #       sources:
-    #         - kalakris-cmake
-    #         - ubuntu-toolchain-r-test
-    #         - llvm-toolchain-precise-3.7
-    #       packages:
-    #         - cmake
-    #         - clang-3.7
-    #   env: COMPILER=clang++-3.7
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - kalakris-cmake
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.7
+          packages:
+            - cmake
+            - clang-3.7
+      env: COMPILER=clang++-3.7
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - kalakris-cmake
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.8
+          packages:
+            - cmake
+            - clang-3.8
+      env: COMPILER=clang++-3.8
 script:
   - mkdir build
   - cd build
