--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,7 @@ matrix:
           packages:
             - cmake
             - clang-3.4
-            - g++-4.9
-      env: COMPILER=clang++
+      env: COMPILER=clang++ CXXFLAGS="-stdlib=libc++" 
     - compiler: clang
       addons:
         apt:
