--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ matrix:
           packages:
             - cmake
             - clang-3.4
-      env: COMPILER=clang++-3.4
+      env: COMPILER=clang++
     - compiler: clang
       addons:
         apt:
