Try again with MPI on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ dist: trusty
 compiler: 
   - gcc
   - clang
+before_install:
+  - sudo apt-get install -qq libopenmpi-dev openmpi-bin
 script:
   - mkdir build
   - cd build
@@ -13,93 +15,3 @@ script:
   - make -j2
 after_script:
   - ctest .
-# matrix:
-#   include:
-#     - compiler: gcc
-#       addons:
-#         apt:
-#           sources:
-#             - kalakris-cmake
-#             - ubuntu-toolchain-r-test
-#           packages:
-#             - cmake
-#             - g++-4.8
-#             - libopenmpi-dev
-#             - openmpi-bin
-#       env: COMPILER=g++-4.8
-#     - compiler: gcc
-#       addons:
-#         apt:
-#           sources:
-#             - kalakris-cmake
-#             - ubuntu-toolchain-r-test
-#           packages:
-#             - cmake
-#             - g++-4.9
-#             - libopenmpi-dev
-#             - openmpi-bin
-#       env: COMPILER=g++-4.9
-#     - compiler: gcc
-#       addons:
-#         apt:
-#           sources:
-#             - kalakris-cmake
-#             - ubuntu-toolchain-r-test
-#           packages:
-#             - cmake
-#             - g++-5
-#             - libopenmpi-dev
-#             - openmpi-bin
-#       env: COMPILER=g++-5
-#     - compiler: clang
-#       addons:
-#         apt:
-#           sources:
-#             - kalakris-cmake
-#             - ubuntu-toolchain-r-test
-#             - llvm-toolchain-precise-3.5
-#           packages:
-#             - cmake
-#             - clang-3.5
-#             - libopenmpi-dev
-#             - openmpi-bin
-#       env: COMPILER=clang++-3.5
-#     - compiler: clang
-#       addons:
-#         apt:
-#           sources:
-#             - kalakris-cmake
-#             - ubuntu-toolchain-r-test
-#             - llvm-toolchain-precise-3.6
-#           packages:
-#             - cmake
-#             - clang-3.6
-#             - libopenmpi-dev
-#             - openmpi-bin
-#       env: COMPILER=clang++-3.6
-#     - compiler: clang
-#       addons:
-#         apt:
-#           sources:
-#             - kalakris-cmake
-#             - ubuntu-toolchain-r-test
-#             - llvm-toolchain-precise-3.7
-#           packages:
-#             - cmake
-#             - clang-3.7
-#             - libopenmpi-dev
-#             - openmpi-bin
-#       env: COMPILER=clang++-3.7
-#     - compiler: clang
-#       addons:
-#         apt:
-#           sources:
-#             - kalakris-cmake
-#             - ubuntu-toolchain-r-test
-#             - llvm-toolchain-precise-3.8
-#           packages:
-#             - cmake
-#             - clang-3.8
-#             - libopenmpi-dev
-#             - openmpi-bin
-#       env: COMPILER=clang++-3.8
