--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,26 @@
 language: cpp
 sudo: true
 dist: trusty
-compiler: 
-  - gcc
-  - clang
-before_install:
-  - sudo apt-get install -qq libopenmpi-dev openmpi-bin
+python: 
+  - "2.7"
+  - "3.5"
+matrix:
+  include:
+    - compiler: gcc
+    - compiler: gcc
+      before_install:
+      - sudo apt-get install -qq libopenmpi-dev openmpi-bin
+    - compiler: clang
+    - compiler: clang
+      before_install:
+      - sudo apt-get install -qq libopenmpi-dev openmpi-bin
 script:
   - mkdir build
   - cd build
   - export CXX=$COMPILER
   - cmake ..
   - make -j2
+  - cd ..
+  - python setup.py install
 after_script:
   - ctest .
