Fixed python import for python3

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,6 @@ script:
   - python setup.py install
 after_script:
   - ctest .
+  - mkdir python_test
+  - cd python_test
+  - python -c "import taskloaf"
