Use g++-4.9 for python install too

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,6 @@ matrix:
       - ./dev/install_travis_gcc
       - sudo apt-get install -qq libopenmpi-dev openmpi-bin
 script:
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
   - ./dev/travis_cpp_test
   - ./dev/travis_py_test
